--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "playwright-typescript-udemy-course",
+  "name": "playwright-second-part",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean:reports": "rimraf allure-report allure-results && mkdirp allure-report allure-results",
-    "generate:reports": "npx allure generate ./allure-results --clean",
-    "open:reports": "npx allure open ./allure-report",
+    "clean:reports": "rm -rf test-result && mkdir -p test-result",
+    "generate:report": "npx ts-node src/helper/index.ts",
     "pretest": "npm run clean:reports",
-    "posttest": "npm run generate:reports && npm run open:reports",
-    "execute:script": "npx playwright test --project=chromium",
-    "test": "npm run execute:script || npm run posttest"
+    "posttest": "npm run generate:report",
+    "execute:script": "cucumber-js test",
+    "test": "npm run execute:script || npm run posttest",
+    "execute:script:failed": "cucumber-js @rerun.txt",
+    "test:failed": "npm run execute:script:failed || npm run generate:report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^10.3.1",
     "@playwright/test": "^1.40.0",
     "@types/node": "^20.6.3",
     "allure-commandline": "^2.24.0",
     "allure-playwright": "^2.8.1",
     "csv-parse": "^5.5.0",
+    "cucumber-html-reporter": "^7.1.1",
     "luxon": "^3.4.3",
     "mkdirp": "^3.0.1",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.2"
   }
 }
